--- a/src/main/resources/templates/teacher/list.html
+++ b/src/main/resources/templates/teacher/list.html
@@ -65,7 +65,7 @@
 
 
 <div class="container" id="main-container">
-  <h2>Notas</h2>
+  <h2>Profesores</h2>
   <p>Los profesores que actualmente figuran en el sistema son las siguientes:</p>
   <div class="table-responsive">
     <table class="table table-hover">
