--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -18,8 +18,15 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/mark/list">Ver Notas</a>
           <a class="dropdown-item" href="/mark/add">Agregar Nota</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/mark/filter">Filtrar</a>
+        </div>
+      </li>
+      <li class="nav-item dropdown active">
+        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
+           aria-haspopup="true" aria-expanded="false"> Gestión de usuarios
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/user/add">Agregar usuario</a>
+          <a class="dropdown-item" href="/user/list">Ver usuarios</a>
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -27,7 +34,8 @@
            aria-haspopup="true" aria-expanded="false"> Gestión de profesores
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/professor/list">Ver profesores</a>
+          <a class="dropdown-item" href="/teacher/list">Ver profesores</a>
+          <a class="dropdown-item" href="/teacher/add">Añadir profesores</a>
         </div>
       </li>
     </ul>
