--- a/src/main/resources/templates/teacher/add.html
+++ b/src/main/resources/templates/teacher/add.html
@@ -8,29 +8,33 @@
 
 <div class="container" id="main-container">
   <h2>Agregar nota</h2>
-  <form class="form-horizontal" method="post" action="/teacher/add">
+  <form class="form-horizontal" method="post" action="/teacher/add" th:object="${teacher}">
     <div class="form-group">
       <label class="control-label col-sm-2" for="dni">DNI:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="dni" name="dni" placeholder="Ejercicio complementario 2" required="true" />
+        <input type="text" class="form-control" id="dni" name="dni" placeholder="Ejercicio complementario 2" required="true" th:value="${teacher.dni}"/>
+        <span class="text-danger" th:if="${#fields.hasErrors('dni')}" th:errors="*{dni}"></span>
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="name">Nombre:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="name" name="name" placeholder="Introduce el nombre" required="true" />
+        <input type="text" class="form-control" id="name" name="name" placeholder="Introduce el nombre" required="true" th:value="${teacher.name}"/>
+        <span class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="surname">Apellidos:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="surname" name="surname" placeholder="Introduce el apellido" required="true" />
+        <input type="text" class="form-control" id="surname" name="surname" placeholder="Introduce el apellido" required="true" th:value="${teacher.surname}"/>
+        <span class="text-danger" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}"></span>
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="category">Categoría:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="category" name="category" placeholder="Introduce una categoría" required="true" />
+        <input type="text" class="form-control" id="category" name="category" placeholder="Introduce una categoría" required="true" th:value="${teacher.category}"/>
+        <span class="text-danger" th:if="${#fields.hasErrors('category')}" th:errors="*{category}"></span>
       </div>
     </div>
 
