--- a/src/main/resources/templates/mark/edit.html
+++ b/src/main/resources/templates/mark/edit.html
@@ -9,14 +9,14 @@
     <h2>Editar nota</h2>
     <form class="form-horizontal" method="post" th:action="${'/mark/edit/' + mark.id}">
         <div class="form-group">
-            <label class="control-label col-sm-2" for="description">Descripción:</label>
+            <label class="control-label col-sm-2">Descripción:</label>
             <div class="col-sm-10">
                 <input th:value="${mark.description}" type="text" class="form-control" name="description"
                        placeholder="Ejemplo Ejercicio 1" required="true"/>
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-sm-2" for="score">Puntuación:</label>
+            <label class="control-label col-sm-2">Puntuación:</label>
             <div class="col-sm-10">
                 <input th:value="${mark.score}" type="number" class="form-control" name="score"
                        placeholder="Entre 0 y 10"
