--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -10,14 +10,14 @@
     <h2>Editar usuario</h2>
     <form class="form-horizontal" method="post" th:action="${'/user/edit/' + user.id}">
         <div class="form-group">
-            <label class="control-label col-sm-2" for="dni">DNI:</label>
+            <label class="control-label col-sm-2">DNI:</label>
             <div class="col-sm-10">
                 <input th:value="${user.dni}" type="text" class="form-control" name="dni"
                        placeholder="dni" required="true"/>
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-sm-2" for="name">Nombre:</label>
+            <label class="control-label col-sm-2">Nombre:</label>
             <div class="col-sm-10">
                 <input th:value="${user.name}" type="text" class="form-control" name="name"
                        placeholder="Name"
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-sm-2" for="lastName">Apellidos:</label>
+            <label class="control-label col-sm-2"d>Apellidos:</label>
             <div class="col-sm-10">
                 <input th:value="${user.lastName}" type="text" class="form-control" name="lastName"
                        placeholder="lastName"
