“SDI-2223-707-sesión5-Ejercicio-complementario2”

--- a/src/main/resources/templates/teacher/add.html
+++ b/src/main/resources/templates/teacher/add.html
@@ -7,7 +7,7 @@
 <nav th:replace="fragments/nav"></nav>
 
 <div class="container" id="main-container">
-  <h2>Agregar nota</h2>
+  <h2>Agregar profesor</h2>
   <form class="form-horizontal" method="post" action="/teacher/add" th:object="${teacher}">
     <div class="form-group">
       <label class="control-label col-sm-2" for="dni">DNI:</label>
